[gd_scene load_steps=5 format=3 uid="uid://c7nlgpkgvlnc4"]

[ext_resource type="Script" uid="uid://cqcc15ksx26tp" path="res://Scripts/UI/death_screen.gd" id="1_8rf44"]
[ext_resource type="Theme" uid="uid://b5rmpnk3vlw6h" path="res://Resources/Themes/Death_Menu.tres" id="2_r2i2h"]

[sub_resource type="Gradient" id="Gradient_6bi5g"]
offsets = PackedFloat32Array(0, 0.233618, 0.952991)
colors = PackedColorArray(0, 0, 0, 1, 0.734809, 0.859081, 0.821177, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_y0ggs"]
gradient = SubResource("Gradient_6bi5g")
width = 500
height = 1080
fill_from = Vector2(0.535385, 0.851852)
fill_to = Vector2(0.443077, 0)

[node name="PauseMenu" type="Control"]
z_index = 1
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_8rf44")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.282407, 0.282407, 0.282407, 0.803922)

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_y0ggs")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 23.0
grow_horizontal = 2
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[color=#000000]Pause[/color]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_r2i2h")

[node name="Restart" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_r2i2h")
text = "Restart"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_r2i2h")

[node name="level_menu" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_r2i2h")
text = "Level Menu"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_r2i2h")

[node name="Resume" type="Button" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
theme = ExtResource("2_r2i2h")
text = "Resume"

[connection signal="button_down" from="VBoxContainer/MarginContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="VBoxContainer/MarginContainer2/level_menu" to="." method="_on_main_menu_button_down"]
[connection signal="button_down" from="VBoxContainer/MarginContainer3/Resume" to="." method="_on_resume_button_down"]
